force-app/main/default/objects/KimbleOne__SupplierProduct__c/KimbleOne__SupplierProduct__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Supplier Product</label>
    <nameField>
        <label>Supplier Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>