force-app/main/default/objects/KimbleOne__SupplierProduct__c/fields/KimbleOne__Resource__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__Resource__c.KimbleOne__ResourceType__r.KimbleOne__IsSupplier__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__Resource__c</referenceTo>
    <relationshipLabel>Supplier Products</relationshipLabel>
    <relationshipName>SupplierProducts</relationshipName>
    <type>Lookup</type>
</CustomField>