force-app/main/default/objects/KimbleOne__SupplierProduct__c/fields/KimbleOne__SupplierAccount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SupplierAccount__c</fullName>
    <label>Supplier Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Supplier Products</relationshipLabel>
    <relationshipName>SupplierProducts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>