force-app/main/default/objects/KimbleOne__SupplierProduct__c/fields/KimbleOne__TravelCategory__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TravelCategory__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Travel Category</label>
    <referenceTo>KimbleOne__TravelCategory__c</referenceTo>
    <relationshipLabel>Supplier Products</relationshipLabel>
    <relationshipName>SupplierProducts</relationshipName>
    <type>Lookup</type>
</CustomField>